--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,41 +1,24 @@
-# This is a basic workflow to help you get started with Actions
+name: UnitTests
 
-name: CI
-
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    strategy:
+      matrix:
+        node-version: [11.x, 12.x, 13.x, 14.17.3, 15.x, 16.x, 18.x, 20.x]
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      - name: 'Sending SMS Notification'
-        uses: Plivo/actions-sms@v1
-        with: 
-          fromPhoneNumber: '+1(415)6667778'
-          toPhoneNumber: '+919900383513'
-          message: 'Hello from Plivo'
-        env:
-          PLIVO_AUTH_ID: ${{ secrets.PLIVO_AUTH_ID }}
-          PLIVO_AUTH_TOKEN: ${{ secrets.PLIVO_AUTH_TOKEN }}
-
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm install plivo
