--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,9 +2,9 @@ name: UnitTests
 
 on:
   push:
-    branches: [ master ]
+    branches: [main]
   pull_request:
-    branches: [ master ]
+    branches: [main]
 
 jobs:
   build:
